<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >
    <data>
        <variable
            name="viewModel"
            type="xyz.dokup.todomvvm.viewmodel.CreateTaskActivityViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/todo_create"
            app:popupTheme="@style/TodoMvvm.Toolbar"
            android:elevation="4dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/title_text_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_large"
                    app:theme="@style/MainEditTextStyle">

                    <EditText
                        android:id="@+id/title_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.title}"
                        android:hint="@string/title"
                        android:onTextChanged="@{viewModel::onTextChanged}"
                        app:theme="@style/MainEditTextStyle"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/description_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_large"
                    app:theme="@style/MainEditTextStyle">

                    <EditText
                        android:id="@+id/description_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.description}"
                        android:hint="@string/description"
                        android:minLines="5"
                        android:gravity="top"
                        android:onTextChanged="@{viewModel::onTextChanged}"
                        app:theme="@style/MainEditTextStyle"/>

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/deadline_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_large"
                    android:layout_marginTop="@dimen/margin_large"
                    app:theme="@style/MainEditTextStyle">

                    <EditText
                        android:id="@+id/deadline_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.deadline}"
                        android:hint="@string/deadline"
                        android:inputType="number"
                        android:onTextChanged="@{viewModel::onTextChanged}"
                        app:theme="@style/MainEditTextStyle"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_large"
                    android:layout_marginStart="@dimen/margin_medium"
                    android:layout_marginEnd="@dimen/margin_medium"
                    android:background="@drawable/primary_5dp_rounded_corner"
                    android:text="@string/save"
                    android:onClick="@{viewModel::onSaveClick}"
                    android:layout_marginBottom="@dimen/margin_medium"/>

            </LinearLayout>



        </ScrollView>

    </LinearLayout>
</layout>